Don't leak strings from <keygen>.  Bug 398665, r=kaie, sr=jst, a=dbaron